更新算法描述

--- a/算法说明.md
+++ b/算法说明.md
@@ -51,7 +51,53 @@ void Camera::ProcessKeyboard(int direction, float deltaTime) {
 ## 2. 双面环形屏幕建模算法
 ### 2.1 实现代码
 ```
-void Screen::Draw(Shader& shader) {
+void createRingScreenWithBezier(
+    /*glm::vec3 controlPoints[4][4],*/ 
+    int segmentsU, int segmentsV,
+    std::vector<float>& vertices,
+    std::vector<unsigned int>& indices)
+    {
+        vertices.clear();
+        indices.clear();
+
+        glm::vec3 controlPoints[4][4];
+        GenerateControlPoints4x4(controlPoints);
+
+        for (int i = 0; i <= segmentsU; ++i) {
+            float u = float(i) / segmentsU;
+            for (int j = 0; j <= segmentsV; ++j) {
+                float v = float(j) / segmentsV;
+
+                glm::vec3 pos = bezierSurfacePoint(controlPoints, u, v);
+                glm::vec3 du = bezierSurfaceTangentU(controlPoints, u, v);
+                glm::vec3 dv = bezierSurfaceTangentV(controlPoints, u, v);
+                glm::vec3 normal = glm::normalize(glm::cross(du, dv));
+
+                vertices.push_back(pos.x);
+                vertices.push_back(pos.y);
+                vertices.push_back(pos.z);
+                vertices.push_back(normal.x);
+                vertices.push_back(normal.y);
+                vertices.push_back(normal.z);
+                vertices.push_back(u);
+                vertices.push_back(v);
+            }
+        }
+
+        int rowVerts = segmentsV + 1;
+        for (int i = 0; i < segmentsU; ++i) {
+            for (int j = 0; j < segmentsV; ++j) {
+                int idx = i * rowVerts + j;
+                indices.push_back(idx);
+                indices.push_back(idx + rowVerts);
+                indices.push_back(idx + rowVerts + 1);
+
+                indices.push_back(idx);
+                indices.push_back(idx + rowVerts + 1);
+                indices.push_back(idx + 1);
+            }
+        }
+    }
 ```
 #### 2.1.1 算法说明-3次Bezier曲面
 `createRingScreenWithBezier()` 函数用于生成一个基于三次Bézier曲面的网格。该算法通过对4x4控制点阵列进行参数化采样，生成光滑的自由形状曲面，常用于图形学中的曲面建模。
